--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dependencies:
   firebase_messaging: ^11.2.3
   url_launcher: ^6.0.17
   fluttertoast: ^8.0.8
+  image_cropper: 1.4.1
+  #for multipart
+  mime: ^1.0.0
 
 
 
